# podstar

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
audio/: __init__.py  diarize.py  transcribe.py
