[project]
name = "pod2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.2.post1",
    "pyannote-audio>=3.3.2",
    "ruff>=0.9.6",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]


[tool.uv]
dev-dependencies = [
    "datasets>=3.3.0",
    "huggingface-hub[cli]>=0.28.1",
]
